terraform-app/net.tf
data "aws_ip_ranges" "route53" {
  regions  = ["global"]
  services = ["route53"]
}

resource "aws_elasticache_subnet_group" "idp" {
  name = "${var.name}-idp-cache-${var.env_name}"
  description = "Redis Subnet Group"
  subnet_ids = ["${aws_subnet.db1.id}","${aws_subnet.db2.id}"]
}

resource "aws_internet_gateway" "default" {
  tags {
    Name = "${var.name}-gateway-${var.env_name}"
  }
  vpc_id = "${aws_vpc.default.id}"
}

resource "aws_route" "default" {
    route_table_id = "${aws_vpc.default.main_route_table_id}"
    destination_cidr_block = "0.0.0.0/0"
    gateway_id = "${aws_internet_gateway.default.id}"
}

# Base security group added to all instances, grants default permissions like
# ingress SSH and ICMP.
resource "aws_security_group" "base" {
  name = "${var.env_name}-base"
  description = "Base security group for rules common to all instances"
  vpc_id = "${aws_vpc.default.id}"

  tags {
    Name = "${var.env_name}-base"
  }

  # allow SSH in from jumphost
  ingress {
    protocol  = "tcp"
    from_port = 22
    to_port   = 22
    security_groups = [ "${aws_security_group.jumphost.id}" ]
  }

  # allow TCP egress to outbound proxy
  egress {
    protocol  = "tcp"
    from_port = "${var.proxy_port}"
    to_port   = "${var.proxy_port}"
    security_groups = ["${aws_security_group.obproxy.id}"]
  }

  # allow ICMP to/from the whole VPC
  ingress {
    protocol  = "icmp"
    from_port = -1
    to_port   = -1
    cidr_blocks = ["${aws_vpc.default.cidr_block}"]
  }
  egress {
    protocol  = "icmp"
    from_port = -1
    to_port   = -1
    cidr_blocks = ["${aws_vpc.default.cidr_block}"]
  }
}

resource "aws_security_group" "app" {
  description = "Security group for sample app servers"

  # allow outbound to the VPC so that we can get to db/redis/logstash/etc.
  egress {
    from_port = 0
    to_port = 65535
    protocol = "tcp"
    cidr_blocks = ["${var.vpc_cidr_block}"]
  }

  # need to get packages and stuff (conditionally)
  # outbound_subnets can be set to "0.0.0.0/0" to allow access to the internet
  egress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["${var.outbound_subnets}"]
  }
  # need to get packages and stuff (conditionally)
  # outbound_subnets can be set to "0.0.0.0/0" to allow access to the internet
  egress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["${var.outbound_subnets}"]
  }

  # github
  egress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["192.30.252.0/22"]
  }

  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    security_groups = ["${aws_security_group.app-alb.id}"]
  }

  ingress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    security_groups = ["${aws_security_group.app-alb.id}"]
  }

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    security_groups = [ "${aws_security_group.jumphost.id}" ]
  }

  # allow CI VPC for integration tests
  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["${var.ci_sg_ssh_cidr_blocks}"]
  }

  name = "${var.env_name}-app"

  tags {
    Name = "${var.name}-app_security_group-${var.env_name}"
    role = "app"
  }

  vpc_id = "${aws_vpc.default.id}"
}

resource "aws_security_group" "cache" {
  description = "Allow inbound and outbound redis traffic with app subnet in vpc"

  egress {
    from_port = 6379
    to_port = 6379
    protocol = "tcp"
    security_groups = [
      "${aws_security_group.app.id}",
      "${aws_security_group.idp.id}"
    ]
  }

  ingress {
    from_port = 6379
    to_port = 6379
    protocol = "tcp"
    security_groups = [
      "${aws_security_group.app.id}",
      "${aws_security_group.idp.id}"
    ]
  }

  # allow CI VPC for integration tests
  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["${var.ci_sg_ssh_cidr_blocks}"]
  }

  name = "${var.name}-cache-${var.env_name}"

  tags {
    Name = "${var.name}-cache_security_group-${var.env_name}"
  }

  vpc_id = "${aws_vpc.default.id}"
}

resource "aws_security_group" "db" {
  description = "Allow inbound and outbound postgresql traffic with app subnet in vpc"

  egress {
    from_port = 5432
    to_port = 5432
    protocol = "tcp"
    cidr_blocks = [
      "${var.app1_subnet_cidr_block}",
      "${var.idp1_subnet_cidr_block}",
      "${var.idp2_subnet_cidr_block}"
    ]
  }

  ingress {
    from_port = 5432
    to_port = 5432
    protocol = "tcp"
    cidr_blocks = [
      "${var.app1_subnet_cidr_block}",
      "${var.idp1_subnet_cidr_block}",
      "${var.idp2_subnet_cidr_block}"
    ]
  }

    # allow CI VPC for integration tests
  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["${var.ci_sg_ssh_cidr_blocks}"]
  }

  name = "${var.name}-db-${var.env_name}"

  tags {
    Name = "${var.name}-db_security_group-${var.env_name}"
  }

  vpc_id = "${aws_vpc.default.id}"
}

resource "aws_security_group" "elk" {
  depends_on = ["aws_internet_gateway.default"]
  description = "Allow inbound traffic to ELK from whitelisted IPs for SSH and app security group"

  # allow outbound to the VPC so that we can get to db/redis/logstash/etc.
  egress {
    from_port = 0
    to_port = 65535
    protocol = "tcp"
    cidr_blocks = ["${var.vpc_cidr_block}"]
  }

  # github
  egress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["192.30.252.0/22"]
  }

  # need to get packages and stuff (conditionally)
  # outbound_subnets can be set to "0.0.0.0/0" to allow access to the internet
  egress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["${var.outbound_subnets}"]
  }
  # need to get packages and stuff (conditionally)
  # outbound_subnets can be set to "0.0.0.0/0" to allow access to the internet
  egress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["${var.outbound_subnets}"]
  }

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    security_groups = [ "${aws_security_group.jumphost.id}" ]
  }

  # need 8834 to comm with Nessus Server
  egress {
    from_port = 8834
    to_port = 8834
    protocol = "tcp"
    cidr_blocks = ["${var.nessusserver_ip}"]
  }

  ingress {
    from_port = 5044
    to_port = 5044
    protocol = "tcp"
    self = true
    cidr_blocks = [
      "${var.app1_subnet_cidr_block}",
      "${var.idp1_subnet_cidr_block}",
      "${var.idp2_subnet_cidr_block}",
      "${var.idp3_subnet_cidr_block}",
      "${var.jumphost1_subnet_cidr_block}",
      "${var.jumphost2_subnet_cidr_block}",
      "${var.public1_subnet_cidr_block}",
      "${var.public2_subnet_cidr_block}",
      "${var.public3_subnet_cidr_block}",
      "${var.private1_subnet_cidr_block}",
      "${var.private2_subnet_cidr_block}",
      "${var.private3_subnet_cidr_block}",

    ]
  }

  ingress {
    from_port = 8443
    to_port = 8443
    protocol = "tcp"
    security_groups = [ "${aws_security_group.jumphost.id}" ]
  }

  ingress {
    from_port = 9200
    to_port = 9300
    protocol = "tcp"
    self = true
  }

  ingress {
    from_port = 9200
    to_port = 9300
    protocol = "tcp"
    cidr_blocks = [
      "${var.elasticsearch_cidr_block}",
      "${var.elk_cidr_block}"
    ]
    description = "Needed for NLB since it does not support referring to sg ids"
  }

  # allow CI VPC for integration tests
  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["${var.ci_sg_ssh_cidr_blocks}"]
  }

  # need 8834 to comm with Nessus Server
  ingress {
    from_port = 8834
    to_port = 8834
    protocol = "tcp"
    cidr_blocks = ["${var.nessusserver_ip}"]
  }

  name = "${var.name}-elk-${var.env_name}"

  tags {
    Name = "${var.name}-elk_security_group-${var.env_name}"
    role = "elk"
    to_deprecate_role = "elasticsearch"
  }

  vpc_id = "${aws_vpc.default.id}"
}

# Create a security group with nothing in it that we can use to work around
# Terraform warts and break bootstrapping loops. For example, since Terraform
# can't handle a security group rule not having a group ID, we can put in this
# null group ID as a placeholder to break bootstrapping loops.
resource "aws_security_group" "null" {
  name = "${var.env_name}-null"
  description = "Null security group for terraform hacks, do NOT put instances in it"
  vpc_id = "${aws_vpc.default.id}"
  tags {
    Name = "${var.env_name}-null"
  }

  ingress = []
  egress = []
}

resource "aws_security_group" "jumphost" {
  description = "Allow inbound jumphost traffic: whitelisted IPs for SSH"

  # allow outbound to the VPC so that we can get to db/redis/logstash/etc.
  egress {
    from_port = 0
    to_port = 65535
    protocol = "tcp"
    cidr_blocks = ["${var.vpc_cidr_block}"]
  }

  # allow analytics redshift cluster to get into jumphost.
  # 127.0.0.1/32 is used as a meaningless default CIDR block in case
  # var.env_name is not a valid key to the redshift_cidr_block map.
  # TODO: remove this once peering connection is fully set up
  egress {
    from_port = 5439
    to_port = 5439
    protocol = "tcp"
    cidr_blocks = ["${lookup(var.redshift_cidr_block, var.env_name, "127.0.0.1/32")}"]
  }

  # Allow egress to redshift in analytics VPC through peering connection
  egress {
    from_port = 5439
    to_port = 5439
    protocol = "tcp"
    # We'd like to refer to the analytics redshift security group ID, but it
    # might not exist yet. Terraform is not able to handle conditionals in a
    # good way (we have to set some security group ID here), so use the null
    # security group ID if the analytics group is empty string.
    security_groups = ["${var.analytics_redshift_security_group_id != "" ? var.analytics_redshift_security_group_id : aws_security_group.null.id}"]
  }

  # need 80/443 to get packages/gems/etc
  egress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # need 80/443 to get packages/gems/etc
  egress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # need 8834 to comm with Nessus Server
  egress {
    from_port = 8834
    to_port = 8834
    protocol = "tcp"
    cidr_blocks = ["${var.nessusserver_ip}"]
  }

  # github
  egress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    # github
    cidr_blocks = ["192.30.252.0/22"]
  }

  # TODO split out ELB security group from jumphost SG
  egress { # ELB
    from_port = 22
    to_port = 22
    protocol = "tcp"
    self = true
  }
  egress { # ELB healthcheck
    from_port = 26
    to_port = 26
    protocol = "tcp"
    self = true
  }

  #s3 gateway
  egress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    prefix_list_ids = ["${aws_vpc_endpoint.private-s3.prefix_list_id}"]
  }

  ingress {  # ELB
    from_port = 22
    to_port = 22
    protocol = "tcp"
    self = true
  }
  ingress {  # ELB healthcheck
    from_port = 26
    to_port = 26
    protocol = "tcp"
    self = true
  }

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    # Remote Access (FIXME rename variable to 'external_ssh_cidr_blocks'?)
    cidr_blocks = [
        "${var.app_sg_ssh_cidr_blocks}"
    ]
  }

  # need 8834 to comm with Nessus Server
  ingress {
    from_port = 8834
    to_port = 8834
    protocol = "tcp"
    cidr_blocks = ["${var.nessusserver_ip}"]
  }

  name = "${var.name}-jumphost-${var.env_name}"

  tags {
    Name = "${var.name}-jumphost_security_group-${var.env_name}"
    role = "jumphost"
  }

  vpc_id = "${aws_vpc.default.id}"
}

resource "aws_security_group" "idp" {
  description = "Allow inbound web traffic and whitelisted IP(s) for SSH"

  # allow outbound to the VPC so that we can get to db/redis/logstash/etc.
  egress {
    from_port = 0
    to_port = 65535
    protocol = "tcp"
    cidr_blocks = ["${var.vpc_cidr_block}"]
  }

  # need to get packages and stuff (conditionally)
  # outbound_subnets can be set to "0.0.0.0/0" to allow access to the internet
  egress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["${var.outbound_subnets}"]
  }
  # need to get packages and stuff (conditionally)
  # outbound_subnets can be set to "0.0.0.0/0" to allow access to the internet
  egress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["${var.outbound_subnets}"]
  }

  # AAMVA DLDV API, used by servers
  # This can probably go away once the obproxy is enabled and these go through
  # the proxy instead.
  egress {
    from_port = 18449
    to_port = 18449
    protocol = "tcp"
    cidr_blocks = [
      "66.227.17.192/26",
      "66.16.0.0/16" # This IP range includes AAMVA's failover, but is not exclusively controlled by AAMVA
    ]
  }

  # LexisNexis RDP API, used by servers
  egress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = [
      "209.243.48.0/24",
      "69.84.186.0/24",
      "66.241.42.0/23",
      "209.243.50.0/24"
    ]
  }

  # github
  egress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["192.30.252.0/22"]
  }

  # need 8834 to comm with Nessus Server
  egress {
    from_port = 8834
    to_port = 8834
    protocol = "tcp"
    cidr_blocks = ["${var.nessusserver_ip}"]
  }

  #s3 gateway
  egress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    prefix_list_ids = ["${aws_vpc_endpoint.private-s3.prefix_list_id}"]
  }

  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    # TODO remove cidr_blocks once security_groups is applied
    cidr_blocks = [
      "${var.alb1_subnet_cidr_block}",
      "${var.alb2_subnet_cidr_block}"
    ]
    security_groups = ["${aws_security_group.web.id}"]
  }
  ingress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    # TODO remove cidr_blocks once security_groups is applied
    cidr_blocks = [
      "${var.alb1_subnet_cidr_block}",
      "${var.alb2_subnet_cidr_block}"
    ]
    security_groups = ["${aws_security_group.web.id}"]
  }

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    security_groups = [ "${aws_security_group.jumphost.id}" ]
  }

  # allow CI VPC for integration tests
  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["${var.ci_sg_ssh_cidr_blocks}"]
  }

  # need 8834 to comm with Nessus Server
  ingress {
    from_port = 8834
    to_port = 8834
    protocol = "tcp"
    cidr_blocks = ["${var.nessusserver_ip}"]
  }

  name = "${var.name}-idp-${var.env_name}"

  tags {
    Name = "${var.name}-idp_security_group-${var.env_name}"
    role = "idp"
    to_deprecate_role = "worker"
  }

  vpc_id = "${aws_vpc.default.id}"
}

# You can't change the security group used by a CloudHSM cluster, so you have
# to import the security group under this ID in order to have terraform manage
# it. (Yes, this is all a huge pain.)
#
# terraform import aws_security_group.cloudhsm sg-12345678
#
resource "aws_security_group" "cloudhsm" {
  name = "${var.env_name}-cloudhsm-tf-placeholder"
  description = "CloudHSM security group (terraform placeholder, delete me)"
  vpc_id = "${aws_vpc.default.id}"

  # We ignore changes to the name and description since they can't be edited.
  lifecycle {
    ignore_changes = ["name", "description"]
  }

  tags {
    Name = "${var.env_name}-cloudhsm"
  }

  # Allow ingress to CloudHSM ports from IDP and from other CloudHSM instances
  ingress {
    from_port = 2223
    to_port = 2225
    protocol = "tcp"
    security_groups = ["${aws_security_group.idp.id}"]
    self = true
  }

  # Allow egress to CloudHSM ports to other cluster instances
  egress {
    from_port = 2223
    to_port = 2225
    protocol = "tcp"
    self = true
  }

  # Allow ICMP from IDP
  ingress {
    from_port = -1
    to_port = -1
    protocol = "icmp"
    security_groups = ["${aws_security_group.idp.id}"]
  }
}

resource "aws_security_group" "pivcac" {
  description = "Allow inbound web traffic and whitelisted IP(s) for SSH"

  # allow outbound to the VPC so that we can get to db/redis/logstash/etc.
  egress {
    from_port = 0
    to_port = 65535
    protocol = "tcp"
    cidr_blocks = ["${var.vpc_cidr_block}"]
  }

  # need to get packages and stuff (conditionally)
  # outbound_subnets can be set to "0.0.0.0/0" to allow access to the internet
  egress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["${var.outbound_subnets}"]
  }
  # need to get packages and stuff (conditionally)
  # outbound_subnets can be set to "0.0.0.0/0" to allow access to the internet
  egress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["${var.outbound_subnets}"]
  }

  # github
  egress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["192.30.252.0/22"]
  }

  #s3 gateway
  egress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    prefix_list_ids = ["${aws_vpc_endpoint.private-s3.prefix_list_id}"]
  }

  # We should never need port 80 for PIVCAC ingress, because users should only
  # arrive via links/redirects from the IDP.
  ingress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    security_groups = [ "${aws_security_group.jumphost.id}" ]
  }

  # allow CI VPC for integration tests
  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["${var.ci_sg_ssh_cidr_blocks}"]
  }

  # need 8834 to comm with Nessus Server
  egress {
    from_port = 8834
    to_port = 8834
    protocol = "tcp"
    cidr_blocks = ["${var.nessusserver_ip}"]
  }

  name = "${var.name}-pivcac-${var.env_name}"

  tags {
    Name = "${var.name}-pivcac_security_group-${var.env_name}"
    role = "pivcac"
  }

  vpc_id = "${aws_vpc.default.id}"
}

# TODO rename to idp-alb
resource "aws_security_group" "web" {
  # TODO: description = "idp-alb security group allowing web traffic"
  description = "Security group for web that allows web traffic from internet"
  vpc_id = "${aws_vpc.default.id}"

  # allow outbound to the VPC so that we can get to the idp hosts
  # TODO remove this rule once the more finely grained egress rules below are
  # rolled out
  egress {
    from_port = 0
    to_port = 65535
    protocol = "tcp"
    cidr_blocks = ["${var.vpc_cidr_block}"]
  }

  # Allow outbound to the IDP subnets on 80/443.
  #
  # We use cidr_blocks rather than security_groups here so that we avoid a
  # bootstrapping cycle and will still remove unmanaged rules.
  # https://github.com/terraform-providers/terraform-provider-aws/issues/3095
  egress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = [
      "${var.idp1_subnet_cidr_block}",
      "${var.idp2_subnet_cidr_block}",
      "${var.idp3_subnet_cidr_block}"
    ]
  }
  egress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = [
      "${var.idp1_subnet_cidr_block}",
      "${var.idp2_subnet_cidr_block}",
      "${var.idp3_subnet_cidr_block}"
    ]
  }

  ingress {
    from_port = 80
    to_port   = 80
    protocol  = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 443
    to_port   = 443
    protocol  = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  name = "${var.name}-web-${var.env_name}"

  tags {
    Name = "${var.env_name}-idp-alb"
  }
}

resource "aws_security_group" "app-alb" {
  description = "App ALB group allowing Internet traffic"
  vpc_id = "${aws_vpc.default.id}"

  # Allow outbound to the VPC so that we can get to the app hosts.
  # We use cidr_blocks rather than security_groups here so that we avoid a
  # bootstrapping cycle and will still remove unmanaged rules.
  # https://github.com/terraform-providers/terraform-provider-aws/issues/3095
  egress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["${var.app1_subnet_cidr_block}"] # TODO make multi-AZ
  }
  egress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["${var.app1_subnet_cidr_block}"] # TODO make multi-AZ
  }

  ingress {
    from_port = 80
    to_port   = 80
    protocol  = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 443
    to_port   = 443
    protocol  = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  name = "${var.env_name}-app-alb"

  tags {
    Name = "${var.env_name}-app-alb"
  }
}

resource "aws_subnet" "app" {
  availability_zone = "${var.region}a"
  cidr_block = "${var.app1_subnet_cidr_block}"
  map_public_ip_on_launch = true

  tags {
    Name = "${var.name}-app_subnet-${var.env_name}"
  }

  vpc_id = "${aws_vpc.default.id}"
}

resource "aws_subnet" "db1" {
  availability_zone = "${var.region}a"
  cidr_block = "${var.db1_subnet_cidr_block}"
  map_public_ip_on_launch = false

  tags {
    Name = "${var.name}-db1_subnet-${var.env_name}"
  }

  vpc_id = "${aws_vpc.default.id}"
}

resource "aws_subnet" "db2" {
  availability_zone = "${var.region}b"
  cidr_block = "${var.db2_subnet_cidr_block}"
  map_public_ip_on_launch = false

  tags {
    Name = "${var.name}-db2_subnet-${var.env_name}"
  }

  vpc_id = "${aws_vpc.default.id}"
}

resource "aws_subnet" "jumphost1" {
  availability_zone = "${var.region}a"
  cidr_block = "${var.jumphost1_subnet_cidr_block}"
  map_public_ip_on_launch = true

  tags {
    Name = "${var.name}-jumphost1_subnet-${var.env_name}"
  }

  vpc_id = "${aws_vpc.default.id}"
}

resource "aws_subnet" "jumphost2" {
  availability_zone = "${var.region}b"
  cidr_block = "${var.jumphost2_subnet_cidr_block}"
  map_public_ip_on_launch = true

  tags {
    Name = "${var.name}-jumphost2_subnet-${var.env_name}"
  }

  vpc_id = "${aws_vpc.default.id}"
}

resource "aws_subnet" "idp1" {
  availability_zone = "${var.region}a"
  cidr_block        = "${var.idp1_subnet_cidr_block}"
  depends_on = ["aws_internet_gateway.default"]
  map_public_ip_on_launch = true

  tags {
    Name = "${var.name}-idp1_subnet-${var.env_name}"
  }

  vpc_id = "${aws_vpc.default.id}"
}

resource "aws_subnet" "idp2" {
  availability_zone = "${var.region}b"
  cidr_block        = "${var.idp2_subnet_cidr_block}"
  depends_on = ["aws_internet_gateway.default"]
  map_public_ip_on_launch = true

  tags {
    Name = "${var.name}-idp2_subnet-${var.env_name}"
  }

  vpc_id = "${aws_vpc.default.id}"
}

resource "aws_subnet" "alb1" {
  availability_zone = "${var.region}a"
  cidr_block        = "${var.alb1_subnet_cidr_block}"
  depends_on = ["aws_internet_gateway.default"]
  map_public_ip_on_launch = true

  tags {
    Name = "${var.name}-alb1_subnet-${var.env_name}"
  }

  vpc_id = "${aws_vpc.default.id}"
}

resource "aws_subnet" "alb2" {
  availability_zone = "${var.region}b"
  cidr_block        = "${var.alb2_subnet_cidr_block}"
  depends_on = ["aws_internet_gateway.default"]
  map_public_ip_on_launch = true

  tags {
    Name = "${var.name}-alb2_subnet-${var.env_name}"
  }

  vpc_id = "${aws_vpc.default.id}"
}

resource "aws_vpc_endpoint" "private-s3" {
    vpc_id = "${aws_vpc.default.id}"
    service_name = "com.amazonaws.${var.region}.s3"
    route_table_ids = ["${aws_vpc.default.main_route_table_id}"]
}

resource "aws_vpc" "default" {
  cidr_block = "${var.vpc_cidr_block}"
 # main_route_table_id = "${aws_route_table.default.id}"
  enable_dns_support = true
  enable_dns_hostnames = true

  tags {
    Name = "${var.name}-vpc-${var.env_name}"
  }
}

# create public and private subnets
resource "aws_subnet" "publicsubnet1" {
  availability_zone = "${var.region}a"
  cidr_block = "${var.public1_subnet_cidr_block}"
  map_public_ip_on_launch = true

  tags {
    Name = "${var.name}-public1_subnet-${var.env_name}"
    type = "public"
  }

  vpc_id = "${aws_vpc.default.id}"
}

resource "aws_subnet" "publicsubnet2" {
  availability_zone = "${var.region}b"
  cidr_block = "${var.public2_subnet_cidr_block}"
  map_public_ip_on_launch = true

  tags {
    Name = "${var.name}-public2_subnet-${var.env_name}"
    type = "public"
  }

  vpc_id = "${aws_vpc.default.id}"
}

resource "aws_subnet" "publicsubnet3" {
  availability_zone = "${var.region}c"
  cidr_block = "${var.public3_subnet_cidr_block}"
  map_public_ip_on_launch = true

  tags {
    Name = "${var.name}-public3_subnet-${var.env_name}"
    type = "public"
  }

  vpc_id = "${aws_vpc.default.id}"
}

resource "aws_subnet" "privatesubnet1" {
  availability_zone = "${var.region}a"
  cidr_block = "${var.private1_subnet_cidr_block}"

  tags {
    Name = "${var.name}-private1_subnet-${var.env_name}"
    type = "private"
  }

  vpc_id = "${aws_vpc.default.id}"
}

resource "aws_subnet" "privatesubnet2" {
  availability_zone = "${var.region}b"
  cidr_block = "${var.private2_subnet_cidr_block}"

  tags {
    Name = "${var.name}-private2_subnet-${var.env_name}"
    type = "private"
  }

  vpc_id = "${aws_vpc.default.id}"
}

resource "aws_subnet" "privatesubnet3" {
  availability_zone = "${var.region}c"
  cidr_block = "${var.private3_subnet_cidr_block}"

  tags {
    Name = "${var.name}-private3_subnet-${var.env_name}"
    type = "private"
  }

  vpc_id = "${aws_vpc.default.id}"
}

resource "aws_security_group" "obproxy" {
  description = "Allow inbound web traffic and whitelisted IP(s) for SSH"

  # allow outbound to the VPC so that we can get to db/redis/logstash/etc.
  egress {
    from_port = 0
    to_port = 65535
    protocol = "tcp"
    cidr_blocks = ["${var.vpc_cidr_block}"]
  }

  # need 80/443 to get packages/gems/etc
  egress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # need 80/443 to get packages/gems/etc
  egress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # allow github access to their static cidr block
  egress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["192.30.252.0/22"]
  }

  #s3 gateway
  egress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    prefix_list_ids = ["${aws_vpc_endpoint.private-s3.prefix_list_id}"]
  }

  # need 8834 to comm with Nessus Server
  egress {
    from_port = 8834
    to_port = 8834
    protocol = "tcp"
    cidr_blocks = ["${var.nessusserver_ip}"]
  }

  # Allow egress to AAMVA
  egress {
    from_port = 18449
    to_port = 18449
    protocol = "tcp"
    cidr_blocks = [
      "66.227.17.192/26",
      "66.16.0.0/16" # This IP range includes AAMVA's failover, but is not exclusively controlled by AAMVA
    ]
  }

  ingress {
    from_port = 3128
    to_port = 3128
    protocol = "tcp"
    cidr_blocks = ["${var.vpc_cidr_block}"]
  }

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    security_groups = ["${aws_security_group.jumphost.id}"]
  }

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["${var.ci_sg_ssh_cidr_blocks}"]
  }

  name = "${var.name}-obproxy-${var.env_name}"

  tags {
    Name = "${var.name}-obproxy-${var.env_name}"
    role = "outboundproxy"
  }

  vpc_id = "${aws_vpc.default.id}"
}
